<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.nytimessearch.activities.FilterActivity">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="44dp"
        android:text="@string/begin_date"
        tools:text="@string/begin_date"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etDate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:digits="1234567890"
        android:maxLength="8"
        android:inputType="date"
        android:onClick="onArticleSearch"
        android:layout_alignBottom="@+id/tvDate"
        android:layout_alignLeft="@+id/cbArts"
        android:layout_alignStart="@+id/cbArts" />

    <TextView
        android:id="@+id/tvSortOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/sort_order"
        android:layout_below="@+id/tvDate"
        android:layout_alignRight="@+id/tvDate"
        android:layout_alignEnd="@+id/tvDate"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sort_order_array"
        android:layout_above="@+id/tvNewsDeskValues"
        android:layout_alignLeft="@+id/etDate"
        android:layout_alignStart="@+id/etDate"
        android:layout_alignRight="@+id/etDate"
        android:layout_alignEnd="@+id/etDate"
        />

    <TextView
        android:id="@+id/tvNewsDeskValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSortOrder"
        android:layout_alignStart="@+id/tvSortOrder"
        android:layout_below="@+id/tvSortOrder"
        android:layout_marginTop="76dp"
        android:text="@string/news_desk_values"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/cbArts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arts"
        android:layout_alignBottom="@+id/tvNewsDeskValues"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:id="@+id/cbFashionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbArts"
        android:layout_alignStart="@+id/cbArts"
        android:layout_below="@+id/cbArts"
        android:layout_marginTop="18dp"
        android:text="@string/fashion_style"
        android:layout_centerHorizontal="true"/>

    <CheckBox
        android:id="@+id/cbSports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbFashionStyle"
        android:layout_alignStart="@+id/cbFashionStyle"
        android:layout_below="@+id/cbFashionStyle"
        android:layout_marginTop="24dp"
        android:text="@string/sports"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbSports"
        android:layout_alignStart="@+id/cbSports"
        android:layout_below="@+id/cbSports"
        android:layout_marginTop="33dp"
        android:text="@string/save"
        android:background="#aa66cc"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
